<resources>
    <string name="app_name">OTO</string>
    <string name="greet">Selamat Datang</string>
    <string name="att_login">Silahkan masuk menggunakan akun OTO Anda</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="lupa"><u>Lupa Password</u></string>
    <string name="login">Login</string>
    <string name="buat_akun"><u>Buat Akun OTO</u></string>
    <string name="verifikasi">Verifikasi kode OTP</string>
    <string name="desc_otp">Masukkan kode verifikasi yang dikirim ke E-mail Anda</string>
    <string name="input_kode">Masukkan kode dalam </string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="resend_otp">Kirim kembali kode OTP</string>
    <string name="main_greet">Halo, Nama!</string>
    <string name="main_desc">Mau melakukan apa hari ini?</string>
    <string name="Lname">Nama lengkap</string>
    <string name="setuju_aturan_pengguna">Setuju dengan aturang pengguna</string>
    <string name="registrasi">Registrasi</string>
    <string name="aktivitas_mendatang">Aktivitas Mendatang</string>
    <string name="tambah_agenda">Tambah Agenda +</string>
    <string name="aktivitas_selesai">Aktivitas yang sudah selesai</string>
    <string name="judul_agenda">Judul Agenda</string>
    <string name="format_waktu">dd/MM/yyyy</string>
    <string name="format_jam">HH:mm</string>
    <string name="phone">Phone</string>
    <string name="simpan">Simpan</string>
    <string name="hapus">Hapus</string>
    <string name="judul_aktivitas">Judul Aktivitas</string>
    <string name="tambah_aplikasi">Tambah Aplikasi</string>
</resources>