<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        android:id="@+id/logo_aplikasi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_aplikasi"
        android:layout_marginTop="25dp"
        android:text="@string/greet"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:id="@+id/login_greet"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_greet"
        android:layout_marginTop="10dp"
        android:text="@string/att_login"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:id="@+id/login_att_greet"/>

    <EditText
        android:layout_width="256dp"
        android:layout_height="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_att_greet"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:paddingHorizontal="20dp"
        android:background="@drawable/input_back"/>

    <EditText
        android:layout_width="256dp"
        android:layout_height="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:paddingHorizontal="20dp"
        android:background="@drawable/input_back"/>

    <TextView
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="10dp"
        android:text="@string/lupa"
        android:textSize="14sp"
        android:id="@+id/lupa"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="276dp"
        android:layout_height="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="155dp"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_back"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/buat_akun"
        android:gravity="center"
        android:textSize="14sp"
        android:id="@+id/buat_akun"/>

</androidx.constraintlayout.widget.ConstraintLayout>