<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/verifikasi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="73dp"
        android:paddingHorizontal="41dp"
        android:id="@+id/title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="12dp"
        android:text="@string/desc_otp"
        android:paddingHorizontal="41dp"
        android:textSize="14sp"
        android:textColor="@color/font"
        android:id="@+id/desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/otp_container">
        <EditText
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:id="@+id/kode_1"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:hint="*"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:layout_marginHorizontal="10dp"/>

        <EditText
            android:id="@+id/kode_2"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:hint="*"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"/>
        <EditText
            android:id="@+id/kode_3"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:hint="*"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"/>
        <EditText
            android:id="@+id/kode_4"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:hint="*"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/otp_container"
        android:layout_marginTop="22dp"
        android:text="@string/input_kode"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textSize="14sp"
        android:id="@+id/timer"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="275dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer"
        android:text="@string/konfirmasi"
        android:textAllCaps="false"
        android:background="@drawable/button_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/konfirmasi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/konfirmasi"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:text="@string/resend_otp"
        android:textColor="@color/font"
        android:textSize="14sp"
        android:id="@+id/resend"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>