<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AktivitasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calendar"
            android:layout_marginTop="20dp"
            android:text="@string/aktivitas_mendatang"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="29dp"
            android:id="@+id/label_aktivitas_mendatang"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_aktivitas_mendatang"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="29dp"
            android:id="@+id/recycler_aktivitas_mendatang"
            tools:listitem="@layout/list_aktivitas"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_aktivitas_mendatang"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/tambah_agenda"
            android:layout_marginHorizontal="29dp"
            android:textSize="15sp"
            android:textColor="@color/font"
            android:id="@+id/tambah_agenda"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tambah_agenda"
            android:layout_marginTop="20dp"
            android:text="@string/aktivitas_selesai"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="29dp"
            android:id="@+id/label_aktivitas_selesai"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_aktivitas_selesai"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="29dp"
            android:id="@+id/recycler_aktivitas_selesai"
            tools:listitem="@layout/list_aktivitas"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>